# gds_oas

./: Cargo.toml  README.md  RELEASE_NOTES_v0.1.0.md  book.toml
.github/workflows/: ci.yml
book/theme/: custom.js
examples/: basic_usage.rs  gdsii_only.rs  oasis_only.rs
src/: aref_expansion.rs  converter.rs  gdsii.rs  lib.rs  oasis.rs  properties.rs  streaming.rs
tests/: gdstk_validation.py  tests.rs
